[tool.poetry]
name = "billing"
version = "0.1.0"
description = ""
authors = ["Themba <themba@teamcoda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
python-dateutil = "^2.8.2"
streamlit = "^1.28.0"
pandas = "^2.1.2"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
